--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,18 @@
-# Netlify configuration for Next.js deployment
+# Netlify configuration for Next.js static export
 [build]
   command = "npm run build"
-  publish = ".next"
+  publish = "out"
 
 # Next.js specific settings
 [build.environment]
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
 
-# Enable Next.js Runtime for Netlify
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
-
-# Redirects and rewrites
+# Redirects and rewrites for SPA routing
 [[redirects]]
   from = "/*"
-  to = "/index.html"
-  status = 200
-  force = false
+  to = "/404.html"
+  status = 404
 
 # Headers for security and performance
 [[headers]]
